tests/snapshots/errors/type_error_while_condition.mc
while 42 {
    print("loop");
}
